# pig_game_succinct

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  script.js  server.js  style.css
pig-game-proof/: Cargo.toml  rust-toolchain.toml
pig-game-proof/program/: Cargo.toml
pig-game-proof/program/src/: main.rs
pig-game-proof/script/: Cargo.toml
